Fix spacing between tweets

--- a/src/components/Tweet.css
+++ b/src/components/Tweet.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding-top: 20px;
     margin: 20px;
 }
 
@@ -30,6 +31,7 @@ main article p {
 
 main article {
     border: 5px solid;
+    margin-bottom: 1.2em;
 }
 
 .user-icon {
@@ -86,4 +88,8 @@ main article {
 .tweet-icon {
     margin: 1em;
     justify-content: flex-end;
+}
+
+.tweets {
+    margin: 1em;
 }
